--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,12 +1,15 @@
 .catalog {
   width: 320px;
   margin: 0 auto;
+  // padding-top: 15px;
+  // padding-right: 20px;
+  // padding-left: 20px;
 }
 
 .catalog__title {
   margin: 0;
-  padding-top: 20px;
-  padding-bottom: 25px;
+  padding-top: 15px;
+  padding-bottom: 28px;
   padding-left: 20px;
 
   font-weight: 400;
