--- a/source/sass/blocks/item.scss
+++ b/source/sass/blocks/item.scss
@@ -1,32 +1,88 @@
 .item {
-  padding-top: 20px;
+  display: flex;
+  // padding-top: 20px;
   padding-right: 20px;
-  padding-bottom: 25px;
+  padding-bottom: 24px;
   padding-left: 20px;
 
   border-bottom: 1px solid #ededed;
+
+  &--more {
+    text-align: center;
+  }
 }
 
 .item__wrapper {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .item__wrapper-inner {
   display: flex;
 }
 
+.item__picture-link {
+  line-height: 0;
+}
+
+.item__wrapper-caption {
+  padding-top: 22px;
+
+  &--more {
+    padding-top: 80px;
+  }
+}
+
 .item__caption {
+  width: 75px;
   margin: 0;
+  margin-bottom: 12px;
 
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
   color: $black;
   text-transform: uppercase;
+
+  &--more {
+    position: relative;
+
+    width: auto;
+    margin-bottom: 7px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: -38px;
+      left: 50%;
+
+      width: 30px;
+      height: 2px;
+
+      background-color: #d3d3d3;
+      transform: translateX(-50%);
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: -52px;
+      left: 50%;
+
+      width: 2px;
+      height: 30px;
+
+      background-color: #d3d3d3;
+      transform: translateX(-50%);
+    }
+  }
 }
 
 .item_description {
+  margin: 0;
+  margin-bottom: 20px;
+
   font-size: 12px;
   line-height: 16px;
   font-family: $arial;
