--- a/source/sass/blocks/item.scss
+++ b/source/sass/blocks/item.scss
@@ -20,6 +20,7 @@
 
 .item__wrapper-inner {
   display: flex;
+  width: 100%;
 }
 
 .item__picture-link {
@@ -27,6 +28,9 @@
 }
 
 .item__wrapper-caption {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
   padding-top: 22px;
 
   &--more {
@@ -115,11 +119,11 @@
   }
 
   .item__wrapper-caption {
-    padding-top: 20px;
-    align-self: stretch;
     display: flex;
     flex-direction: column;
     align-items: stretch;
+    align-self: stretch;
+    padding-top: 20px;
   }
 
   .item__caption {
