--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -31,21 +31,38 @@
 
 .form__program-wrapper-item {
   padding-right: 20px;
+  // padding-bottom: 8px;
   padding-left: 20px;
 
   &--basic {
+    padding-bottom: 8px;
+
     border-bottom: 1px solid #ededed;
   }
 
   &--type {
-    padding-top: 15px;
+    padding-top: 27px;
 
     border-bottom: 1px solid #ededed;
+  }
+
+  &--contacts {
+    margin-bottom: 15px;
+    padding-top: 28px;
+  }
+
+  &--comment {
+    margin-bottom: 25px;
+  }
+
+  &--additionally {
+    margin-bottom: 17px;
   }
 
   &--submit {
     display: flex;
     flex-direction: column;
+    margin-bottom: 32px;
 
     text-align: center;
   }
@@ -75,7 +92,7 @@
 .form__block-title {
   position: relative;
 
-  margin-bottom: 30px;
+  margin-bottom: 34px;
 
   font-weight: 400;
   font-size: 24px;
@@ -87,7 +104,7 @@
     &::after {
       content: "";
       position: absolute;
-      top: 15px;
+      top: 14px;
       right: -119px;
 
       width: 99px;
@@ -108,11 +125,13 @@
       height: 3px;
 
       background-color: $green;
-      transform: translateY(-50%);
+      // transform: translateY(-50%);
     }
   }
 
   &--additionally {
+    margin-bottom: 41px;
+
     &::after {
       content: "";
       position: absolute;
@@ -123,7 +142,7 @@
       height: 3px;
 
       background-color: $green;
-      transform: translateY(-50%);
+      // transform: translateY(-50%);
     }
   }
 }
@@ -131,12 +150,21 @@
 .form__textarea {
   width: 100%;
   min-height: 150px;
+  padding: 12px;
+  // font: inherit;
 
-  font: inherit;
+  font-size: 16px;
+  line-height: 18px;
   text-transform: uppercase;
 }
 
+.form-submit {
+  margin-bottom: 21px;
+}
+
 .form__required {
+  margin: 0;
+
   line-height: 16px;
   font-family: $arial;
 }
