--- a/source/sass/blocks/input-text.scss
+++ b/source/sass/blocks/input-text.scss
@@ -4,10 +4,14 @@
   margin-bottom: 14px;
 }
 
+.input-text__label {
+  margin-right: 12px;
+}
+
 .input-text__input {
   flex-grow: 1;
   height: 45px;
-  margin-left: 15px;
+  // margin-left: 15px;
   padding-right: 15px;
   padding-left: 15px;
 
