--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -38,5 +38,15 @@
       font-size: 20px;
       line-height: 20px;
     }
+
+    &--submit {
+      // width: 284px;
+      padding-top: 16px;
+      padding-right: 65px;
+      padding-bottom: 16px;
+      padding-left: 65px;
+
+      font-size: 20px;
+    }
   }
 }
