--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -157,7 +157,7 @@
   text-transform: uppercase;
 }
 
-.form-submit {
+.form__submit {
   margin-bottom: 21px;
 }
 
@@ -202,10 +202,8 @@
   }
 
   .form__program-wrapper-item {
-    margin-right: 37px;
-    margin-left: 41px;
-    padding-right: 0;
-    padding-left: 0;
+    padding-right: 37px;
+    padding-left: 41px;
 
     border-bottom: none;
 
@@ -341,7 +339,7 @@
     font-size: 16px;
   }
 
-  .form-submit {
+  .form__submit {
     margin-right: 60px;
     margin-bottom: 0;
   }
@@ -353,7 +351,9 @@
   }
 
   .form__wrapper {
+    padding-top: 88px;
     padding-right: 70px;
+    padding-bottom: 82px;
     padding-left: 70px;
   }
 
@@ -370,19 +370,47 @@
 
   .form__program-wrapper {
     display: flex;
+    margin-bottom: 69px;
   }
 
   .form__program-wrapper-item {
     padding-right: 40px;
     padding-left: 40px;
 
+    &--basic {
+      padding-bottom: 0;
+    }
+
+    &--type {
+      padding-top: 0;
+    }
+
     &--flex {
       display: flex;
       width: 50%;
     }
+
+    &--contacts {
+      margin-bottom: 47px;
+      padding-top: 0;
+    }
+
+    &--comment {
+      margin-bottom: 64px;
+    }
+
+    &--additionally {
+      margin-bottom: 20px;
+      padding-right: 0;
+      padding-left: 0;
+    }
   }
 
   .form__block {
+    &--basic {
+      width: 100%;
+    }
+
     &--type {
       width: 100%;
     }
@@ -418,6 +446,8 @@
     }
 
     &--additionally {
+      margin-left: 40px;
+
       &::before {
         left: -110px;
 
@@ -435,5 +465,9 @@
   .form__contacts-wrapper {
     display: flex;
     justify-content: space-between;
+  }
+
+  .form__submit {
+    margin-right: 80px;
   }
 }
