--- a/source/sass/blocks/input-checkbox.scss
+++ b/source/sass/blocks/input-checkbox.scss
@@ -16,3 +16,11 @@
     padding-left: 40px;
   }
 }
+
+@media (min-width: $desktop-width) {
+  .input-checkbox {
+    width: 25%;
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+}
