--- a/source/sass/blocks/input-text.scss
+++ b/source/sass/blocks/input-text.scss
@@ -36,7 +36,7 @@
       width: 20px;
       height: 20px;
 
-      background-image: url("../../img/icon-phone.svg");
+      background-image: url("../img/icon-phone.svg");
       background-repeat: no-repeat;
       background-position: 50% 50%;
       transform: translateY(-50%);
