--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -65,8 +65,10 @@
   }
 
   .page-header__logo {
+    width: 173px;
+    height: auto;
     padding: 0;
-    padding-top: 20px;
+    padding-top: 25px;
 
     border: none;
   }
@@ -78,6 +80,14 @@
 
 @media (min-width: $desktop-width) {
   .page-header {
+    position: relative;
+    z-index: 10;
+
     width: 1220px;
+  }
+
+  .page-header__logo {
+    width: 202px;
+    padding-top: 54px;
   }
 }
