--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,3 +6,6 @@ $input-black: #222222;
 $arial: "Arial", sans-serif;
 $tablet-width: 768px;
 $desktop-width: 1440px;
+
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
