--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -10,12 +10,15 @@
 .page-footer__map {
   min-height: 362px;
 
-  background-image: url("../img/bg-map-mobile@1x.png");
+  background-image: url("../img/map-pin.png"), url("../img/bg-map-mobile@1x.png");
   background-repeat: no-repeat;
+  background-position: 50% 45%, 0 -38px;
+  background-size: 58px 53px, auto;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-    background-image: url("../img/bg-map-mobile@2x.png");
-    background-size: 320px auto;
+    background-image: url("../img/map-pin.png"), url("../img/bg-map-mobile@2x.png");
+    // background-position: 50% 45%, 0 -38px;
+    background-size: 58px 53px, 320px auto;
   }
 }
 
@@ -49,11 +52,14 @@
   .page-footer__map {
     min-height: 396px;
 
-    background-image: url("../img/bg-map-tablet@1x.png");
+    background-image: url("../img/map-pin.png"), url("../img/bg-map-tablet@1x.png");
+    background-position: 50% 50%, 0 -4px;
+    background-size: auto, auto;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/bg-map-tablet@2x.png");
-      background-size: 768px auto;
+      background-image: url("../img/map-pin.png"), url("../img/bg-map-tablet@2x.png");
+      // background-position: 50% 50%, 0 -4px;
+      background-size: auto, 767px auto;
     }
   }
 
@@ -86,11 +92,13 @@
   .page-footer__map {
     min-height: 400px;
 
-    background-image: url("../img/bg-map-desktop@1x.png");
+    background-image: url("../img/map-pin.png"), url("../img/bg-map-desktop@1x.png");
+    background-position: 76% 50%, 0 0;
+    background-size: auto, auto;
 
     @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
-      background-image: url("../img/bg-map-desktop@2x.png");
-      background-size: 1440px auto;
+      background-image: url("../img/map-pin.png"), url("../img/bg-map-desktop@2x.png");
+      background-size: auto, 1440px auto;
     }
   }
 }
