--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -109,6 +109,11 @@
   background-repeat: no-repeat;
   background-position: 0 0;
 
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/gift-photo-mobile@2x.jpg");
+    background-size: 280px auto;
+  }
+
   &::before {
     content: "";
     position: absolute;
