--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -228,6 +228,17 @@
     padding-right: 115px;
     padding-left: 424px;
 
+    background-image: url("../../img/gift-photo-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/gift-photo-tablet@2x.jpg");
+      background-size: 708px auto;
+    }
+
+
+
     &::before {
       top: 50%;
       left: 90px;
