Адаптивная/ретиновая графика. Каталог десктоп версия.

--- a/source/sass/blocks/item.scss
+++ b/source/sass/blocks/item.scss
@@ -210,6 +210,14 @@
     padding-left: 40px;
   }
 
+  .item__picture-wrapper {
+    // display: flex;
+    // align-items: flex-end;
+    width: 245px;
+    // height: 208px;
+    // margin-top: -82px;
+  }
+
   .item__caption {
     margin-right: 15px;
     margin-bottom: 18px;
