--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -327,6 +327,15 @@
     padding-right: 0;
     padding-left: 0;
 
+    background-image: url("../../img/gift-photo-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("../img/gift-photo-desktop@2x.jpg");
+      background-size: 245px auto;
+    }
+
     &::before {
       top: 22%;
       left: 50%;
