Адаптивная/ретиновая графика. Пофиксил баг для Мозилы.

--- a/source/sass/blocks/item.scss
+++ b/source/sass/blocks/item.scss
@@ -27,6 +27,11 @@
   width: 100%;
 }
 
+.item__picture-wrapper {
+  width: 140px;
+  height: 144px;
+}
+
 .item__picture-link {
   line-height: 0;
 }
