--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -228,7 +228,7 @@
     padding-right: 115px;
     padding-left: 424px;
 
-    background-image: url("../../img/gift-photo-tablet@1x.jpg");
+    background-image: url("../img/gift-photo-tablet@1x.jpg");
     background-repeat: no-repeat;
     background-position: 0 0;
 
@@ -327,7 +327,7 @@
     padding-right: 0;
     padding-left: 0;
 
-    background-image: url("../../img/gift-photo-desktop@1x.jpg");
+    background-image: url("../img/gift-photo-desktop@1x.jpg");
     background-repeat: no-repeat;
     background-position: 0 0;
 
