--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -8,7 +8,7 @@
 }
 
 .page-footer__map {
-  min-height: 362px;
+  height: 362px;
 
   background-image: url("../img/map-pin.png"), url("../img/bg-map-mobile@1x.png");
   background-repeat: no-repeat;
@@ -19,6 +19,13 @@
     background-image: url("../img/map-pin.png"), url("../img/bg-map-mobile@2x.png");
     // background-position: 50% 45%, 0 -38px;
     background-size: 58px 53px, 320px auto;
+  }
+
+  iframe {
+    width: 100%;
+    height: 100%;
+
+    border: 0;
   }
 }
 
@@ -50,7 +57,7 @@
   }
 
   .page-footer__map {
-    min-height: 396px;
+    height: 396px;
 
     background-image: url("../img/map-pin.png"), url("../img/bg-map-tablet@1x.png");
     background-position: 50% 50%, 0 -4px;
@@ -90,7 +97,7 @@
   }
 
   .page-footer__map {
-    min-height: 400px;
+    height: 400px;
 
     background-image: url("../img/map-pin.png"), url("../img/bg-map-desktop@1x.png");
     background-position: 76% 50%, 0 0;
