--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -133,6 +133,7 @@
       width: 720px;
       height: 696px;
 
+      background-color: $green;
       background-image: url("../img/index-background-desktop@1x.jpg");
       background-repeat: no-repeat;
 
