--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,9 +1,12 @@
 $black: #111111;
 $green: #68b738;
+$green-dark: #5eaa2f;
 $gray: #f2f2f2;
 $light-black: #444444;
 $input-black: #222222;
+
 $arial: "Arial", sans-serif;
+
 $tablet-width: 768px;
 $desktop-width: 1440px;
 
