Стайлгайд для кнопки v2

--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -2,6 +2,7 @@ $black: #111111;
 $green: #68b738;
 $green-dark: #5eaa2f;
 $gray: #f2f2f2;
+$gray-dark: #ebebeb;
 $light-black: #444444;
 $input-black: #222222;
 
