--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -36,6 +36,16 @@
     color: $light-black;
 
     background-color: $gray;
+
+    &:hover {
+      background-color: $gray-dark;
+    }
+
+    &:active {
+      color: rgba(68, 68, 68, 0.3);
+
+      background-color: $gray-dark;
+    }
   }
 }
 
