--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,6 +5,9 @@ $gray: #f2f2f2;
 $gray-dark: #ebebeb;
 $light-black: #444444;
 $input-black: #222222;
+$border: #e6e6e6;
+$border-hover: #cdcdcd;
+$border-active: #444444;
 
 $arial: "Arial", sans-serif;
 
