--- a/source/sass/blocks/input-checkbox.scss
+++ b/source/sass/blocks/input-checkbox.scss
@@ -9,6 +9,15 @@
 
   cursor: pointer;
 
+  &:hover::before {
+    border-color: $border-hover;
+  }
+
+  &:active {
+    outline: none;
+    opacity: 0.3;
+  }
+
   &::before {
     content: "";
     position: absolute;
@@ -19,9 +28,15 @@
     width: 30px;
     height: 30px;
 
-    border: 1px solid #cfcfcf;
+    border: 1px solid $border;
     transform: translateY(-50%);
   }
+}
+
+.input-checkbox__input:focus + label::before {
+  outline: thin dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+  // outline: rgb(59, 153, 252) auto 5px;
 }
 
 .input-checkbox__input:checked + label {
