--- a/source/sass/blocks/input-text.scss
+++ b/source/sass/blocks/input-text.scss
@@ -3,44 +3,8 @@
   align-items: baseline;
   margin-bottom: 14px;
 
-  &--email {
+  &--icon {
     position: relative;
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 50%;
-      right: 18px;
-
-      display: block;
-      width: 17px;
-      height: 13px;
-
-      background-image: url("../img/icon-mail.svg");
-      background-repeat: no-repeat;
-      background-position: 50% 50%;
-      transform: translateY(-50%);
-    }
-  }
-
-  &--tel {
-    position: relative;
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 50%;
-      right: 15px;
-
-      display: block;
-      width: 20px;
-      height: 20px;
-
-      background-image: url("../img/icon-phone.svg");
-      background-repeat: no-repeat;
-      background-position: 50% 50%;
-      transform: translateY(-50%);
-    }
   }
 }
 
@@ -66,15 +30,23 @@
   &:active {
     border: solid 2px $border-active;
     outline: none;
+
+    & + .input-text__icon {
+      fill: $green;
+    }
   }
 
-  &--email {
+  &--icon {
     padding-right: 40px;
   }
+}
 
-  &--tel {
-    padding-right: 40px;
-  }
+.input-text__icon {
+  position: absolute;
+  top: 50%;
+  right: 17px;
+
+  transform: translateY(-50%);
 }
 
 @media (min-width: $tablet-width) {
