--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -8,6 +8,7 @@ $input-black: #222222;
 $border: #e6e6e6;
 $border-hover: #cdcdcd;
 $border-active: #444444;
+$logo-default: #666666;
 
 $arial: "Arial", sans-serif;
 
