1300px, частично главная страница.

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -65,9 +65,9 @@
 
 @media (min-width: $desktop-width) {
   .contacts {
-    position: absolute;
-    top: 95px;
-    left: 110px;
+    // position: absolute;
+    // top: 95px;
+    // left: 110px;
 
     width: 570px;
     padding-top: 65px;
