--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -309,11 +309,11 @@
 @media (min-width: $desktop-width) {
   .example {
     flex-direction: row;
-    width: 1440px;
+    width: 1300px;
   }
 
   .example__wrapper {
-    width: 1440px;
+    width: 1300px;
     padding-top: 80px;
     // display: flex;
     // padding-right: 40px;
@@ -322,16 +322,16 @@
 
   .example__title {
     margin-bottom: 76px;
-    margin-left: 110px;
+    margin-left: 40px;
   }
 
   .example__wrapper-inner {
     position: relative;
 
     display: flex;
-    padding-right: 70px;
+    // padding-right: 70px;
     padding-bottom: 65px;
-    padding-left: 70px;
+    // padding-left: 70px;
 
     background-color: $gray;
   }
@@ -380,7 +380,7 @@
     // margin-bottom: 55px;
     position: absolute;
     top: -189px;
-    right: 71px;
+    right: 0;
 
     margin: 0;
   }
