--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -17,18 +17,18 @@
   font-size: 24px;
   line-height: 24px;
 
-  &::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: -20px;
+  // &::after {
+  //   content: "";
+  //   position: absolute;
+  //   top: 50%;
+  //   right: -20px;
 
-    width: 53px;
-    height: 3px;
+  //   width: 53px;
+  //   height: 3px;
 
-    background-color: $green;
-    // transform: translateY(-50%);
-  }
+  //   background-color: $green;
+  //   // transform: translateY(-50%);
+  // }
 }
 
 .additional__list {
@@ -156,24 +156,24 @@
     font-size: 36px;
     line-height: 36px;
 
-    &::before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: -68px;
+    // &::before {
+    //   content: "";
+    //   position: absolute;
+    //   top: 50%;
+    //   left: -68px;
 
-      width: 30px;
-      height: 3px;
+    //   width: 30px;
+    //   height: 3px;
 
-      background-color: $green;
-      // transform: translateY(-50%);
-    }
+    //   background-color: $green;
+    //   // transform: translateY(-50%);
+    // }
 
-    &::after {
-      right: -30px;
+    // &::after {
+    //   right: -30px;
 
-      width: 328px;
-    }
+    //   width: 328px;
+    // }
   }
 
   .additional__list {
@@ -255,26 +255,14 @@
 
 @media (min-width: $desktop-width) {
   .additional {
-    width: 1440px;
+    width: 1300px;
     margin-bottom: 85px;
-    padding-right: 70px;
-    padding-left: 70px;
+    padding-right: 0;
+    padding-left: 0;
   }
 
   .additional__title {
     margin-left: 40px;
-
-    &::before {
-      left: -110px;
-
-      width: 70px;
-    }
-
-    &::after {
-      right: -70px;
-
-      width: 956px;
-    }
   }
 
   .additional__wrapper {
