--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -98,17 +98,17 @@
   font-size: 24px;
   line-height: 24px;
 
-  &::after {
-    content: "";
-    position: absolute;
-    top: 15px;
-    left: calc(100% + 22px);
+  // &::after {
+  //   content: "";
+  //   position: absolute;
+  //   top: 15px;
+  //   left: calc(100% + 22px);
 
-    width: calc(320px - 100% - 42px);
-    height: 3px;
+  //   width: calc(320px - 100% - 42px);
+  //   height: 3px;
 
-    background-color: $green;
-  }
+  //   background-color: $green;
+  // }
 
   &--additionally {
     margin-bottom: 41px;
@@ -228,24 +228,24 @@
     font-size: 36px;
     line-height: 36px;
 
-    &::before {
-      content: "";
-      position: absolute;
-      top: 22px;
-      left: -70px;
+    // &::before {
+    //   content: "";
+    //   position: absolute;
+    //   top: 22px;
+    //   left: -70px;
 
-      width: 30px;
-      height: 3px;
+    //   width: 30px;
+    //   height: 3px;
 
-      background-color: $green;
-    }
+    //   background-color: $green;
+    // }
 
-    &::after {
-      top: 22px;
-      left: calc(100% + 39px);
+    // &::after {
+    //   top: 22px;
+    //   left: calc(100% + 39px);
 
-      width: calc(768px - 100% - 110px);
-    }
+    //   width: calc(768px - 100% - 110px);
+    // }
 
     &--additionally {
       margin-bottom: 66px;
@@ -283,25 +283,25 @@
 
 @media (min-width: $desktop-width) {
   .form {
-    width: 1440px;
+    width: 1300px;
   }
 
   .form__wrapper {
     padding-top: 74px;
-    padding-right: 70px;
+    padding-right: 0;
     padding-bottom: 82px;
-    padding-left: 70px;
+    padding-left: 0;
   }
 
   .form__title {
-    padding-right: 40px;
     padding-left: 40px;
   }
 
   .form__tagline {
-    width: 405px;
-    padding-right: 40px;
-    padding-left: 40px;
+    width: 325px;
+    margin-left: 40px;
+    padding-right: 0;
+    padding-left: 0;
   }
 
   .form__program-wrapper {
@@ -354,15 +354,15 @@
   }
 
   .form__block-title {
-    &::before {
-      left: -110px;
+    // &::before {
+    //   left: -110px;
 
-      width: 70px;
-    }
+    //   width: 70px;
+    // }
 
-    &::after {
-      width: calc(1440px - 100% - 110px);
-    }
+    // &::after {
+    //   width: calc(1440px - 100% - 110px);
+    // }
 
     &--additionally {
       margin-left: 40px;
