--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -1,34 +1,37 @@
 .additional {
+  position: relative;
+
   width: 320px;
   margin: 0 auto;
   margin-bottom: 35px;
   padding-top: 29px;
-  padding-right: 20px;
-  padding-left: 20px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 43px;
+
+    width: 100%;
+    height: 3px;
+
+    background-color: $green;
+  }
 }
 
 .additional__title {
   position: relative;
 
+  display: inline-block;
   margin: 0;
   margin-bottom: 34px;
+  padding-right: 22px;
+  padding-left: 20px;
 
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
 
-  // &::after {
-  //   content: "";
-  //   position: absolute;
-  //   top: 50%;
-  //   right: -20px;
-
-  //   width: 53px;
-  //   height: 3px;
-
-  //   background-color: $green;
-  //   // transform: translateY(-50%);
-  // }
+  background-color: #ffffff;
 }
 
 .additional__list {
@@ -93,10 +96,10 @@
   font-family: $arial;
 }
 
-// .additional__order {
-//   font-size: 16px;
-//   line-height: 20px;
-// }
+.additional__offer {
+  width: 280px;
+  margin: 0 auto;
+}
 
 .additional__offer-wraper {
   position: relative;
@@ -145,35 +148,20 @@
   .additional {
     width: 768px;
     margin-bottom: 76px;
-    padding-right: 30px;
-    padding-left: 30px;
+
+    &::before {
+      top: 50px;
+    }
   }
 
   .additional__title {
     margin-bottom: 80px;
-    margin-left: 38px;
+    margin-left: 30px;
+    padding-right: 37px;
+    padding-left: 37px;
 
     font-size: 36px;
     line-height: 36px;
-
-    // &::before {
-    //   content: "";
-    //   position: absolute;
-    //   top: 50%;
-    //   left: -68px;
-
-    //   width: 30px;
-    //   height: 3px;
-
-    //   background-color: $green;
-    //   // transform: translateY(-50%);
-    // }
-
-    // &::after {
-    //   right: -30px;
-
-    //   width: 328px;
-    // }
   }
 
   .additional__list {
@@ -222,6 +210,10 @@
     text-align: right;
   }
 
+  .additional__offer {
+    width: 708px;
+  }
+
   .additional__offer-wraper {
     min-height: 200px;
     padding-top: 73px;
@@ -262,7 +254,7 @@
   }
 
   .additional__title {
-    margin-left: 40px;
+    margin-left: 0;
   }
 
   .additional__wrapper {
@@ -306,6 +298,7 @@
   .additional__offer {
     display: flex;
     width: 25%; //325px
+    margin: 0;
     padding-right: 40px;
     padding-left: 40px;
   }
