--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -29,9 +29,29 @@
   text-transform: uppercase;
 }
 
+.form__program-wrapper {
+  margin-bottom: 28px;
+}
+
 .form__program-wrapper-item {
+  position: relative;
+
   padding-right: 20px;
   padding-left: 20px;
+
+  &--line {
+    &::before {
+      content: "";
+      position: absolute;
+      top: 15px;
+      left: 0;
+
+      width: 100%;
+      height: 3px;
+
+      background-color: $green;
+    }
+  }
 
   &--basic {
     padding-bottom: 8px;
@@ -47,7 +67,6 @@
 
   &--contacts {
     margin-bottom: 15px;
-    padding-top: 28px;
   }
 
   &--comment {
@@ -91,24 +110,17 @@
 .form__block-title {
   position: relative;
 
-  max-width: 181px;
+  max-width: 226px;
   margin-bottom: 34px;
+  margin-left: -20px;
+  padding-right: 22px;
+  padding-left: 20px;
 
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
 
-  // &::after {
-  //   content: "";
-  //   position: absolute;
-  //   top: 15px;
-  //   left: calc(100% + 22px);
-
-  //   width: calc(320px - 100% - 42px);
-  //   height: 3px;
-
-  //   background-color: $green;
-  // }
+  background-color: #ffffff;
 
   &--additionally {
     margin-bottom: 41px;
@@ -157,13 +169,12 @@
 
   .form__wrapper {
     padding-top: 57px;
-    padding-right: 30px;
     padding-bottom: 72px;
-    padding-left: 30px;
   }
 
   .form__title {
     margin-bottom: 55px;
+    margin-left: 30px;
     padding: 0;
 
     font-size: 60px;
@@ -172,6 +183,7 @@
   .form__tagline {
     width: 384px;
     margin-bottom: 66px;
+    margin-left: 30px;
     padding-right: 0;
     padding-left: 40px;
 
@@ -180,14 +192,21 @@
   }
 
   .form__program-wrapper {
-    margin-bottom: 48px;
+    // margin-bottom: 48px;
+    margin-bottom: 76px;
   }
 
   .form__program-wrapper-item {
-    padding-right: 37px;
-    padding-left: 41px;
+    padding-right: 67px;
+    padding-left: 71px;
 
     border-bottom: none;
+
+    &--line {
+      &::before {
+        top: 22px;
+      }
+    }
 
     &--basic {
       padding-bottom: 25px;
@@ -224,28 +243,12 @@
   .form__block-title {
     max-width: none;
     margin-bottom: 76px;
+    margin-left: -42px;
+    padding-right: 40px;
+    padding-left: 40px;
 
     font-size: 36px;
     line-height: 36px;
-
-    // &::before {
-    //   content: "";
-    //   position: absolute;
-    //   top: 22px;
-    //   left: -70px;
-
-    //   width: 30px;
-    //   height: 3px;
-
-    //   background-color: $green;
-    // }
-
-    // &::after {
-    //   top: 22px;
-    //   left: calc(100% + 39px);
-
-    //   width: calc(768px - 100% - 110px);
-    // }
 
     &--additionally {
       margin-bottom: 66px;
@@ -294,7 +297,7 @@
   }
 
   .form__title {
-    padding-left: 40px;
+    margin-left: 40px;
   }
 
   .form__tagline {
@@ -354,16 +357,6 @@
   }
 
   .form__block-title {
-    // &::before {
-    //   left: -110px;
-
-    //   width: 70px;
-    // }
-
-    // &::after {
-    //   width: calc(1440px - 100% - 110px);
-    // }
-
     &--additionally {
       margin-left: 40px;
     }
